<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/contentLib"
        android:icon="@drawable/baseline_local_library_24"
        android:title="@string/content_library"/>

    <item
        android:id="@+id/eventsNe"
        android:icon="@drawable/baseline_event_24"
        android:title="@string/events_and_news"
        />
    <item
        android:id="@+id/AccessFtr"
        android:icon="@drawable/baseline_accessibility_24"
        android:title="@string/accessability_settings"/>


    <item
        android:id="@+id/app_bar_switch"
        android:icon="@drawable/baseline_language_24"
        android:title="@string/change_english_to_welsh"
        app:actionLayout="@layout/switch_item"

       />


    <item
        android:id="@+id/close_btn"
        android:icon="@drawable/icnclose"
        android:title="@string/close"/>


</menu>