<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/graySpec">


    <TextView
        android:id="@+id/accessSetV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accessability_settings"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047"
        android:textColor="@color/white"
        android:contentDescription="@string/accessability_settings"/>


    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="46dp"
        android:layout_height="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24"
        app:tint="@color/white"
        android:contentDescription="@string/returnBack"
        />

    <Button
        android:id="@+id/TalkBackBtn"
        android:layout_width="265dp"
        android:layout_height="85dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="136dp"
        android:text="@string/talkback_feature"
        android:textSize="25dp"
        android:backgroundTint="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accessSetV"
        />


</androidx.constraintlayout.widget.ConstraintLayout>