<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteX="12dp"
    tools:layout_editor_absoluteY="81dp"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/musseum1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/graySpec"
    tools:ignore="WebViewLayout">



    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="657dp"
        android:background="@color/graySpec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="133dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="137dp"
            android:layout_marginBottom="2dp"
            android:text="@string/welsh_heritage"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="46dp"
            android:layout_height="41dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="-8dp"
            app:srcCompat="@drawable/baseline_arrow_back_24"
            app:tint="@color/white" />


    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@drawable/bottom_oval_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

    </RelativeLayout>


    <ImageView
        android:id="@+id/museumImg"
        android:layout_width="796dp"
        android:layout_height="542dp"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/crdf1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-140dp" />

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="412dp"
        android:layout_height="53dp"
        android:layout_marginTop="484dp"
        android:backgroundTint="@color/graySpec"
        android:background="@drawable/rounded_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="91dp"
            android:layout_marginTop="11dp"
            android:text="@string/national_museum_cardiff"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </RelativeLayout>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="250dp"
        android:layout_height="59dp"
        android:layout_marginTop="8dp"
        android:text="@string/exhibits_highlights"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout3" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        app:cardCornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.denzcoskun.imageslider.ImageSlider
            android:id="@+id/imageSlider"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:iss_auto_cycle="true"
            app:iss_delay="1000"
            app:iss_period="1000"
            tools:layout_editor_absoluteX="6dp"
            tools:layout_editor_absoluteY="448dp" />


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="396dp"
        android:layout_height="255dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:paddingTop="10dp"
        android:text="@string/cardiffexhibitsdesc"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />


    <TextView
        android:id="@+id/textView8"
        android:layout_width="374dp"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:paddingTop="10dp"
        android:text="@string/exhibits_highlights_video"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <WebView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/webView"
        app:cardCornerRadius="40dp"
        tools:ignore="MissingConstraints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="379dp"
        android:layout_height="252dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:paddingTop="10dp"
        android:text="@string/cardiffexhibitsdesc"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/webView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/imersiveExp"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/lightGray"
        app:cardCornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <androidx.cardview.widget.CardView
            android:layout_width="189dp"
            android:layout_height="211dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            app:cardCornerRadius="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:layout_width="240dp"
                android:layout_height="240dp"
                android:src="@drawable/emrs_exp" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="218dp"
            android:layout_marginTop="40dp"
            android:text="@string/immersive_experience"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="230dp"
            android:layout_marginTop="90dp"
            android:text="@string/google_street_view"
            android:textColor="@color/white"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="235dp"
            android:layout_marginTop="140dp"
            android:text="@string/panomric_images"
            android:textColor="@color/white"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />



    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>